--- a/Overlord.html
+++ b/Overlord.html
@@ -82,7 +82,7 @@
         </div>
         <div class="w3-container">
         	<h5 class="w3-opacity"><b>Главы</b></h5>
-          <h5><b><a href="Overlord read.html">Том 1 Глава 1</a></b></h5>
+          <h5><b>Том 1 Глава 1</b></h5>
           
           
         </div>
