--- a/forhome.html
+++ b/forhome.html
@@ -11,6 +11,7 @@
   <link href="forHome.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script src="forHome.js"></script>
 </head>
 	
 <body id="MangaHub" data-spy="scroll" data-target=".navbar" data-offset="60">
