--- a/forhome.html
+++ b/forhome.html
@@ -68,7 +68,7 @@
 мужчина
 Навыки / способности
 Амнезия / Потеря памяти</p>
-      <br><a href="fordelivery.html"><button class="btn btn-default btn-lg">Читать</button></a>
+      <br><a href="fordelivery.html"><button class="btn btn-default btn-lg" onclick="play()">Читать</button></a>
     </div>
     <div class="col-sm-4">
 <img src="Dorohedoro.jpg" alt="Дорохедоро">
@@ -113,7 +113,7 @@
 Волшебники / маги
 ГГ имба Умный ГГ
 Реинкарнация</p>
-      <br><button class="btn btn-default btn-lg">Читать</button>
+      <br><button class="btn btn-default btn-lg" onclick="play()">Читать</button>
     </div>
     <div class="col-sm-4">
 <img src="Overlord.jpg" alt="Оверлорд">
