--- a/forhome.html
+++ b/forhome.html
@@ -41,6 +41,8 @@
   <h1>MangaHub</h1> 
 </div>
 
+	<audio id="audio" src="Звук4.mp3"></audio>
+	
 <!-- Container (Home Section) -->
 <div id="home" class="container-fluid">
   <div class="row">
