--- a/forhome.html
+++ b/forhome.html
@@ -70,7 +70,7 @@
 мужчина
 Навыки / способности
 Амнезия / Потеря памяти</p>
-      <br><a href="fordelivery.html"><button class="btn btn-default btn-lg" onclick="play()">Читать</button></a>
+      <br><a href="fordelivery.html"><button class="btn btn-default btn-lg">Читать</button></a>
     </div>
     <div class="col-sm-4">
 <img src="Dorohedoro.jpg" alt="Дорохедоро">
@@ -134,12 +134,12 @@
       <a href="Kaguya.html"><h2><p>Госпожа Кагуя</p></h2></a>
     </div>
     <div class="col-sm-4">
-	<img src="Енби.jpg" alt="Ёнби непобедимый">
-      <a href="https://mangalib.me/i-alone-level-up?section=info"><h2><p>Ёнби непобедимый</p></h2></a>
+	<img src="Енби.jpg" alt="Ёнби непобедимый" onclick="play()">
+      <a onclick="play()"><h2><p>Ёнби непобедимый</p></h2></a>
     </div>
     <div class="col-sm-4">
-<img src="Соло.jpg" alt="Поднятие уровня в одиночку">
-<a href="https://mangalib.me/i-alone-level-up?section=info"><h2><p>Поднятие уровня в одиночку</p></h2></a>
+<img src="El.jpg" alt="Элисед" onclick="play()">
+<a onclick="play()"><h2><p>Элисед</p></h2></a>
     </div>
   </div>
 
@@ -162,7 +162,7 @@
     <div class="col-sm-4">
         <img src="Art_3.jpg" alt="Третий арт" width="400" height="500">
         <p><strong>Оверлорд</strong></p>
-        <p>Лейман Димаш</p>
+	    <p><a onclick="play()">Лейман Димаш</a></p>
     </div>
   </div><br>
   
