--- a/forhack.html
+++ b/forhack.html
@@ -29,94 +29,94 @@
 <div class="w3-content w3-display-container">
 
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Dorohedoro/0.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/0.jpeg" style="width:100%">
 </div>
 
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Dorohedoro/1.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/1.jpeg" style="width:100%">
 </div>
 
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Dorohedoro/2.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/2.jpeg" style="width:100%">
 </div>
 
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Dorohedoro/3.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/3.jpeg" style="width:100%">
 </div>
 
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Dorohedoro/4.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/4.jpeg" style="width:100%">
 </div>
 
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Dorohedoro/5.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/5.jpeg" style="width:100%">
 </div>
 
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Dorohedoro/6.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/6.jpeg" style="width:100%">
 </div>
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Dorohedoro/7.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/7.jpeg" style="width:100%">
 </div>
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Dorohedoro/8.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/8.jpeg" style="width:100%">
 </div>
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Dorohedoro/9.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/9.jpeg" style="width:100%">
 </div>
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Dorohedoro/10.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/10.jpeg" style="width:100%">
 </div>
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Dorohedoro/11.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/11.jpeg" style="width:100%">
 </div>
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Dorohedoro/12.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/12.jpeg" style="width:100%">
 </div>
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Dorohedoro/13.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/13.jpeg" style="width:100%">
 </div>
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Dorohedoro/14.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/14.jpeg" style="width:100%">
 </div>
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Dorohedoro/15.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/15.jpeg" style="width:100%">
 </div>
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Dorohedoro/16.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/16.jpeg" style="width:100%">
 </div>
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Dorohedoro/17.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/17.jpeg" style="width:100%">
 </div>
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Dorohedoro/18.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/18.jpeg" style="width:100%">
 </div>
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Dorohedoro/19.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/19.jpeg" style="width:100%">
 </div>
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Dorohedoro/20.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/20.jpeg" style="width:100%">
 </div>
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Dorohedoro/21.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/21.jpeg" style="width:100%">
 </div>
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Dorohedoro/22.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/22.jpeg" style="width:100%">
 </div>
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Dorohedoro/23.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/23.jpeg" style="width:100%">
 </div>
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Dorohedoro/24.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/24.jpeg" style="width:100%">
 </div>
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Dorohedoro/25.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/25.jpeg" style="width:100%">
 </div>
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Dorohedoro/26.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/26.jpeg" style="width:100%">
 </div>
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Dorohedoro/27.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/27.jpeg" style="width:100%">
 </div>
 
 <button class="w3-button w3-display-left w3-black" onclick="plusDivs(-1)" style="margin-right:50px ">&#10094;</button>
