--- a/Kaguya read.html
+++ b/Kaguya read.html
@@ -29,101 +29,49 @@
 <div class="w3-content w3-display-container">
 
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Kaguya/0.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/0.jpeg" style="width:100%">
 </div>
 
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Kaguya/1.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/1.jpeg" style="width:100%">
 </div>
 
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Kaguya/2.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/2.jpeg" style="width:100%">
 </div>
 
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Kaguya/3.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/3.jpeg" style="width:100%">
 </div>
 
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Kaguya/4.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/4.jpeg" style="width:100%">
 </div>
 
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Kaguya/5.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/5.jpeg" style="width:100%">
 </div>
 
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Kaguya/6.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/6.jpeg" style="width:100%">
 </div>
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Kaguya/7.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/7.jpeg" style="width:100%">
 </div>
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Kaguya/8.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/8.jpeg" style="width:100%">
 </div>
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Kaguya/9.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/9.jpeg" style="width:100%">
 </div>
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Kaguya/10.jpeg" style="width:100%">
+  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/10.jpeg" style="width:100%">
 </div>
-<div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Kaguya/11.jpeg" style="width:100%">
-</div>
-<div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Kaguya/12.jpeg" style="width:100%">
-</div>
-<div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Kaguya/13.jpeg" style="width:100%">
-</div>
-<div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Kaguya/14.jpeg" style="width:100%">
-</div>
-<div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Kaguya/15.jpeg" style="width:100%">
-</div>
-<div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Kaguya/16.jpeg" style="width:100%">
-</div>
-<div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Kaguya/17.jpeg" style="width:100%">
-</div>
-<div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Kaguya/18.jpeg" style="width:100%">
-</div>
-<div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Kaguya/19.jpeg" style="width:100%">
-</div>
-<div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Kaguya/20.jpeg" style="width:100%">
-</div>
-<div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/Kaguya/21.jpeg" style="width:100%">
-</div>
+
 <button class="w3-button w3-display-left w3-black" onclick="plusDivs(-1)" style="margin-right:50px ">&#10094;</button>
 <button class="w3-button w3-display-right w3-black" onclick="plusDivs(1)" style="margin-left: 50px">&#10095;</button>
 
 </div>
-
-<script>
-var slideIndex = 1;
-showDivs(slideIndex);
-
-function plusDivs(n) {
-  showDivs(slideIndex += n);
-}
-
-function showDivs(n) {
-  var i;
-  var x = document.getElementsByClassName("mySlides");
-  if (n > x.length) {slideIndex = 1}
-  if (n < 1) {slideIndex = x.length}
-  for (i = 0; i < x.length; i++) {
-     x[i].style.display = "none";  
-  }
-  x[slideIndex-1].style.display = "block";  
-}
-</script>
 
 </body>
 </html>
