--- a/forhack.html
+++ b/forhack.html
@@ -30,95 +30,45 @@
 <div class="w3-content w3-display-container">
 
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/0.jpeg" style="width:100%">
+  <img src="0.jpeg" style="width:100%">
 </div>
 
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/1.jpeg" style="width:100%">
+  <img src="1.jpeg" style="width:100%">
 </div>
 
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/2.jpeg" style="width:100%">
+  <img src="2.jpeg" style="width:100%">
 </div>
 
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/3.jpeg" style="width:100%">
+  <img src="3.jpeg" style="width:100%">
 </div>
 
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/4.jpeg" style="width:100%">
+  <img src="4.jpeg" style="width:100%">
 </div>
 
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/5.jpeg" style="width:100%">
+  <img src="5.jpeg" style="width:100%">
 </div>
 
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/6.jpeg" style="width:100%">
+  <img src="6.jpeg" style="width:100%">
 </div>
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/7.jpeg" style="width:100%">
+  <img src="7.jpeg" style="width:100%">
 </div>
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/8.jpeg" style="width:100%">
+  <img src="8.jpeg" style="width:100%">
 </div>
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/9.jpeg" style="width:100%">
+  <img src="9.jpeg" style="width:100%">
 </div>
 <div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/10.jpeg" style="width:100%">
+  <img src="10.jpeg" style="width:100%">
 </div>
-<div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/11.jpeg" style="width:100%">
-</div>
-<div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/12.jpeg" style="width:100%">
-</div>
-<div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/13.jpeg" style="width:100%">
-</div>
-<div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/14.jpeg" style="width:100%">
-</div>
-<div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/15.jpeg" style="width:100%">
-</div>
-<div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/16.jpeg" style="width:100%">
-</div>
-<div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/17.jpeg" style="width:100%">
-</div>
-<div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/18.jpeg" style="width:100%">
-</div>
-<div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/19.jpeg" style="width:100%">
-</div>
-<div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/20.jpeg" style="width:100%">
-</div>
-<div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/21.jpeg" style="width:100%">
-</div>
-<div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/22.jpeg" style="width:100%">
-</div>
-<div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/23.jpeg" style="width:100%">
-</div>
-<div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/24.jpeg" style="width:100%">
-</div>
-<div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/25.jpeg" style="width:100%">
-</div>
-<div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/26.jpeg" style="width:100%">
-</div>
-<div class="w3-display-container mySlides">
-  <img src="/Applications/XAMPP/xamppfiles/htdocs/Magzhan website/27.jpeg" style="width:100%">
-</div>
+
 
 <button class="w3-button w3-display-left w3-black" onclick="plusDivs(-1)" style="margin-right:50px ">&#10094;</button>
 <button class="w3-button w3-display-right w3-black" onclick="plusDivs(1)" style="margin-left: 50px">&#10095;</button>
