--- a/forhack.html
+++ b/forhack.html
@@ -27,7 +27,7 @@
   </div>
 </nav>
 
-
+<div class="w3-content w3-display-container">
 
 <div class="w3-display-container mySlides">
   <img src="0.jpeg" style="width:100%">
