--- a/forhack.html
+++ b/forhack.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-<title>Дорохедоро Глава 1</title>
+<head>
+  <title>Дорохедоро Глава 1</title>
 <meta charset="utf-8">
 <link rel="shortcut icon" href="book.ico" type="image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,7 +10,7 @@
 <link href="forReadManga.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js">
   <script src="slider.js"></script>
-
+  </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
   <div class="container">
