--- a/forhome.html
+++ b/forhome.html
@@ -186,6 +186,9 @@
       <div class="item">
         <h4>"Трубы в чулочках 💋💋💋"<br><span>Абай</span></h4>
       </div>
+	    <div class="item">
+        <h4>"Абду лучший кун в моей жизниы"<br><span>Абай</span></h4>
+      </div>
     </div>
 
     <!-- Left and right controls -->
